Fix horizontal scroll error

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,6 @@ html {
 body {
 	background-position: bottom;
 	background-repeat: no-repeat;
-	overflow: auto;
 	font-family:"Calluna", Georgia, serif;
 	padding: 0;
 	margin: 0;
@@ -222,7 +221,6 @@ p a{
 
 
 #index {
-	width: 840px; 
 	z-index: 4;
 	text-align: center;
 	margin: 0 0 55px 170px;
@@ -462,7 +460,6 @@ p a{
 	margin-bottom: 20px;
 }
 .top-section {
-	width: 810px;
 	margin: 10px 0 30px 150px;
 	overflow: auto;
 }
@@ -577,7 +574,6 @@ p a{
 /* --- Index Bottom Section --- */
 
 .bottom-section {
-	width: 760px;
 	margin: 10px 0 0 200px;
 	overflow: auto;
 	margin-bottom:45px;
@@ -975,7 +971,7 @@ text-transform: uppercase;
 
 #footer-logo{
 	position: absolute;
-	right: -70px;
+	right: 0;
 	top: 0px;
 }
 #footer-logo a{
@@ -996,6 +992,7 @@ text-transform: uppercase;
 	width: 130px;
 	padding-top: 20px;
 	margin-right: 130px;
+	margin-right: 60px;
 }
 .footer-nav ul{
 	padding: 0;
@@ -1032,6 +1029,7 @@ text-transform: uppercase;
 	font-size:0.9em;
 	clear: both;
 	padding-right: 318px;
+	padding-right: 388px;
 	margin-top: 60px;
 	clear: both;
 }
